signal.c: fix received_signal

* signal.c (received_signal): fix condition to define.
  [ruby-core:67032] [Bug #10629]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@48920 b2dd03c8-39d4-4d8f-98ff-823fe69b080e